CY-10010 - Changed to separate resource classes
